# pokemon-rs

./: Cargo.toml  LICENSE  README.md  TODO.md  index.html  run_wasm.sh  server.py
assets/data/: move_sets.toml  pokedex.toml
common_lib/: Cargo.toml
common_lib/src/: debug.rs  frame.rs  io.rs  lib.rs  parameters.rs  time.rs  toml.rs
core_lib/: Cargo.toml
core_lib/src/: global.rs  lib.rs
core_lib/src/application/: app.rs  global.rs  mod.rs  state.rs
core_lib/src/application/utils/: debug.rs
core_lib/src/application/wgpu_context/: events.rs  mod.rs  shaders.rs  state.rs
core_lib/src/application/wgpu_context/pipelines/: graphics.rs  mod.rs
core_lib/src/application/wgpu_context/pipelines/implementations/: graphics_default.rs  mod.rs
core_lib/src/application/wgpu_context/shaders/: mod.rs
core_lib/src/application/window/: events.rs  init.rs  key_map.rs
core_lib/src/scene/: camera.rs  mod.rs
core_lib/src/scene/animation/: movement.rs
core_lib/src/scene/geometry/: vertex.rs
core_lib/src/scene/rendering/: frame.rs  mod.rs  texture.rs
core_lib/src/scene/rendering/graphics_pipelines/: graphics_default.rs  mod.rs
core_lib/src/scene/text/: font.rs  font_system.rs  global.rs  mod.rs  text_instance.rs
core_lib/src/utils/: config.rs  debug.rs  mod.rs  time.rs  toml.rs
core_lib/src/wgpu_context/: events.rs  global.rs  mod.rs  shaders.rs  state.rs
core_lib/src/wgpu_context/pipelines/: graphics.rs
core_lib/src/window/: init.rs  mod.rs
game/: Cargo.toml  main.rs
game/src/: lib.rs
game/src/application/: app.rs  events.rs  mod.rs  state.rs
gameplay_lib/: Cargo.toml
gameplay_lib/src/: lib.rs
gameplay_lib/src/character/: player.rs
gameplay_lib/src/core/: debug.rs  mod.rs  toml.rs
gameplay_lib/src/pokemon/: egg.rs  mod.rs  stats.rs  types.rs
gameplay_lib/src/pokemon/abilities/: mod.rs  names.rs
gameplay_lib/src/pokemon/evolutions/: mod.rs
gameplay_lib/src/pokemon/moves/: mod.rs  names.rs
gameplay_lib/src/pokemon/pokedex/: breeding.rs  categories.rs  entry.rs  experience_group.rs  mod.rs  names.rs  wild_attributes.rs
gameplay_lib/src/states/: mod.rs  state.rs  states_stack.rs
gameplay_lib/src/states/concrete/: empty.rs  mod.rs  overworld.rs  overworld_dialog.rs  test.rs
shaders/: default.wgsl
src/: main.rs
src/application/: mod.rs  parameters.rs
src/application/core/: debug.rs
src/application/window/: events.rs  init.rs  key_map.rs
src/core_lib/application/: app.rs  global.rs  mod.rs  parameters.rs  state.rs
src/core_lib/application/wgpu_context/: state.rs
src/core_lib/application/window/: init.rs
src/game_lib/: lib.rs
src/game_lib/application/: app.rs  global.rs  mod.rs  state.rs
src/game_lib/application/core/: debug.rs  mod.rs  time.rs
src/game_lib/application/wgpu_context/: events.rs  state.rs
src/game_lib/application/window/: events.rs  init.rs  key_map.rs
