[package]
name = "pokemon-rs"
version = "0.1.0"
edition = "2021"
description = "Yet another pokemon fangame"
license = "MIT/Apache-2.0"
repository = "https://github.com/MrBigoudi/pokemon-rs"

[lib]
name = "core_lib"
path = "src/core_lib/lib.rs"
# We need rlib to run wgpu in a desktop environment and cdylib to create the Web Assembly
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pokemon-rs"
path = "src/main.rs"

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
take_mut = "0.2.2"
wgpu = "23.0.0"
winit = "0.30.5"

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "23.0.0", features = ["webgl"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}
