[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
cfg-if = "1.0.0"
env_logger = "0.11.5"
log = "0.4.22"

# Dependencies not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
location-macros = "0.1.2"

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3.31", features = ["async-await"] }
reqwest = "0.12.9"
pollster = "0.4.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "23.0.0", features = ["webgl"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Window",
    "Location",
]}
