[package]
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
bytemuck = { version = "1.19.0", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.5"
glam = "0.29.2"
log = "0.4.22"
wgpu = "23.0.0"
winit = "0.30.5"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

# Dependencies not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "23.0.0", features = ["webgl"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}
