[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pokemon-rs"
path = "main.rs"

[dependencies]
common_lib = { path = "../common_lib" }
core_lib = { path = "../core_lib" }
gameplay_lib = { path = "../gameplay_lib" }
cfg-if = "1.0.0"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
take_mut = "0.2.2"
wgpu = "23.0.0"
winit = "0.30.5"

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "23.0.0", features = ["webgl"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}

[lib]
crate-type = ["cdylib", "rlib"]