[package]
name = "gameplay_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
toml = "0.8.19"
pollster = "0.4.0"

# Dependencies not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
location-macros = "0.1.2"

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.12.9"