[package]
name = "gameplay_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
toml = "0.8.19"

# Dependencies not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
