[package]
name = "gameplay_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
core_lib = { path = "../core_lib" }
bytemuck = { version = "1.19.0", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
toml = "0.8.19"

# Dependencies not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "23.0.0"

# Dependencies for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0.0", features = ["webgl"]}